Fix binding issue

--- a/FastestFibonacci.WebUI/Pages/Index.razor
+++ b/FastestFibonacci.WebUI/Pages/Index.razor
@@ -27,7 +27,7 @@
 
 <div hidden="@(!CalculatedFibonacciValue.HasValue)">
     <div><h5>Fib(@CalculatedInputValue):</h5> @(CalculatedFibonacciValue.HasValue ? CalculatedFibonacciValue.Value : 0)</div>
-    <div><h5>Algorithm Used:</h5> @SelectedImplementation</div>
+    <div><h5>Algorithm Used:</h5> @CalculatedWithImplementation</div>
     <div><h5>Time to Calculate:</h5> @FibonacciCalculationTime</div>
 </div>
 
